MFH: fix bug #38217 (ReflectionClass::newInstanceArgs() tries to allocate too much memory)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@217075 c90b9560-bf6c-de11-be94-00142212c4b1